<resources>
    <string name="app_name">Event Finder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="newUsername">Enter new username</string>
    <string name="newPassword">Enter new password</string>
    <string name="newPasswordConf">Confirm new password</string>
    <string name="clickHere">New? Register here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="registerValidation">Text and numbers only</string>
    <string name="BrowseTitle">Events</string>
    <string name="allowNotifications">Allow notifications?</string>
</resources>
